// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Summary /> should style trend red/green 1`] = `
<span
  class="styles__Percentage-sc-5rbl8j-4 drShaa"
>
  <image
    aria-label="Upwards trend"
    class="styles__TrendIcon-sc-5rbl8j-3 bRQjW"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 3`] = `
<span
  class="styles__Percentage-sc-5rbl8j-4 fiolhQ"
>
  <image
    aria-label="Downwards trend"
    class="styles__TrendIcon-sc-5rbl8j-3 bRQjW"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 4`] = `
<image
  aria-label="Downwards trend"
  class="styles__TrendIcon-sc-5rbl8j-3 bRQjW"
/>
`;

exports[`<Summary /> should style trend red/green 5`] = `
<span
  class="styles__Percentage-sc-5rbl8j-4 drShaa"
>
  <image
    aria-label="Upwards trend"
    class="styles__TrendIcon-sc-5rbl8j-3 bRQjW"
  />
  50.00%
</span>
`;

exports[`<Summary /> should style trend red/green 6`] = `
<image
  aria-label="Upwards trend"
  class="styles__TrendIcon-sc-5rbl8j-3 bRQjW"
/>
`;
